force-app/main/default/objects/Opportunity/fields/RelatedKYCSendStatus__c.field-meta.xml
<CustomField>
    <fullName>RelatedKYCSendStatus__c</fullName>
    <label>Related KYC Send Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>