force-app/main/default/objects/Opportunity/fields/Relatorio_Reconciliacao__c.field-meta.xml
<CustomField>
    <fullName>Relatorio_Reconciliacao__c</fullName>
    <description>Na opção de modelo de negócio Gateway, informar se deseja contratar o serviço de relatório de reconciliação.</description>
    <inlineHelpText>Na opção de modelo de negócio Gateway, informar se deseja contratar o serviço de relatório de reconciliação.</inlineHelpText>
    <label>Relatório de Reconciliação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>