force-app/main/default/objects/Opportunity/fields/RequestChangeClause__c.field-meta.xml
<CustomField>
    <fullName>RequestChangeClause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Change Clause</label>
    <type>Checkbox</type>
</CustomField>