force-app/main/default/objects/Opportunity/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acessórios</fullName>
                <label>Acessories</label>
            </value>
            <value>
                <fullName>Conteúdo Adulto</fullName>
                <label>Adult Content</label>
            </value>
            <value>
                <fullName>Bares e Restaurantes</fullName>
                <label>Bars &amp; Restaurants</label>
            </value>
            <value>
                <fullName>Bebidas</fullName>
                <label>Beverage</label>
            </value>
            <value>
                <fullName>Vestuário</fullName>
                <label>Clothing</label>
            </value>
            <value>
                <fullName>Construção civil</fullName>
                <label>Construction &amp; Industry</label>
            </value>
            <value>
                <fullName>Cosméticos</fullName>
                <label>Cosmetics &amp; Beauty</label>
            </value>
            <value>
                <fullName>Criptomoedas</fullName>
                <label>Cryptocurrencies</label>
            </value>
            <value>
                <fullName>D2C</fullName>
            </value>
            <value>
                <fullName>Decoração</fullName>
                <label>Decoration &amp; Home</label>
            </value>
            <value>
                <fullName>Digital</fullName>
                <label>Digital Products &amp; Services</label>
            </value>
            <value>
                <fullName>Dropshipping</fullName>
            </value>
            <value>
                <fullName>Educação</fullName>
                <label>Education</label>
            </value>
            <value>
                <fullName>E-learning</fullName>
                <label>Education &amp; E-learning</label>
            </value>
            <value>
                <fullName>Eletronics</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
                <label>Events &amp; Ticketing</label>
            </value>
            <value>
                <fullName>Alimentos</fullName>
                <label>Food</label>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Calçados</fullName>
                <label>Footwear</label>
            </value>
            <value>
                <fullName>Móveis e/ou eletrodomésticos</fullName>
                <label>Furniture</label>
            </value>
            <value>
                <fullName>Jogos de azar e apostas</fullName>
                <label>Gambling &amp; Betting</label>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Home Appliances</fullName>
            </value>
            <value>
                <fullName>Hotéis</fullName>
                <label>Hotels</label>
            </value>
            <value>
                <fullName>Joias/Relógios</fullName>
                <label>Jewelry &amp; watches</label>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>PSP</fullName>
                <label>Payment Service Providers (PSP)</label>
            </value>
            <value>
                <fullName>Pet</fullName>
                <label>Pet Products &amp; Services</label>
            </value>
            <value>
                <fullName>Produtos físicos</fullName>
                <label>Physical Products</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>