force-app/main/default/objects/Opportunity/fields/SegmentoOutrosSpecify__c.field-meta.xml
<CustomField>
    <fullName>SegmentoOutrosSpecify__c</fullName>
    <inlineHelpText>Specify the Industry Segment</inlineHelpText>
    <label>Specify Industry</label>
    <length>30</length>
    <type>Text</type>
</CustomField>