force-app/main/default/objects/Opportunity/fields/SeguidoresInstagram__c.field-meta.xml
<CustomField>
    <fullName>SeguidoresInstagram__c</fullName>
    <label>Seguidores Instagram</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>