force-app/main/default/objects/Opportunity/fields/Selected_Credit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Selected_Credit_Frequency__c</fullName>
    <label>Selected Credit Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>