force-app/main/default/objects/Opportunity/fields/Settlement_Frequency_1__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Frequency_1__c</fullName>
    <label>Credit Card Settlement Frequency 1°</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AntecipationFrequency</valueSetName>
    </valueSet>
</CustomField>