force-app/main/default/objects/Opportunity/fields/Settlement_Frequency_2__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Frequency_2__c</fullName>
    <label>Settlement Frequency 2°</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AntecipationFrequency</valueSetName>
    </valueSet>
</CustomField>