force-app/main/default/objects/Opportunity/fields/Settlement_Frequency_Test__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Frequency_Test__c</fullName>
    <label>Settlement Frequency Test</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AntecipationFrequency</valueSetName>
    </valueSet>
</CustomField>