force-app/main/default/objects/Opportunity/fields/SettlementFrequency__c.field-meta.xml
<CustomField>
    <fullName>SettlementFrequency__c</fullName>
    <label>Settlement Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TransferFrequency</valueSetName>
    </valueSet>
</CustomField>