force-app/main/default/objects/Opportunity/fields/Signed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Completed: Signed Contract</label>
    <type>Checkbox</type>
</CustomField>