force-app/main/default/objects/Opportunity/fields/TaxaBaseDeAntecipacao__c.field-meta.xml
<CustomField>
    <fullName>TaxaBaseDeAntecipacao__c</fullName>
    <label>Taxa Base de Antecipação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxaBaseAntecipacaoNational</valueSetName>
    </valueSet>
</CustomField>