force-app/main/default/objects/Opportunity/fields/TemValidadeCPF__c.field-meta.xml
<CustomField>
    <fullName>TemValidadeCPF__c</fullName>
    <label>Tem validade de CPF?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>