force-app/main/default/objects/Opportunity/fields/TeseProspeccao__c.field-meta.xml
<CustomField>
    <fullName>TeseProspeccao__c</fullName>
    <label>Prospection thesis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>