force-app/main/default/objects/Opportunity/fields/ThreeDSCreditCard__c.field-meta.xml
<CustomField>
    <fullName>ThreeDSCreditCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Three DS Credit Card</label>
    <type>Checkbox</type>
</CustomField>