force-app/main/default/objects/Opportunity/fields/Ticket_Medio__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Medio__c</fullName>
    <label>Ticket Médio de Vendas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>