force-app/main/default/objects/Opportunity/fields/TierCS__c.field-meta.xml
<CustomField>
    <fullName>TierCS__c</fullName>
    <label>Tier CS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Tier</fullName>
            </value>
            <value>
                <fullName>High Tier</fullName>
            </value>
            <value>
                <fullName>Middle Touch</fullName>
            </value>
            <value>
                <fullName>Low Touch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>