force-app/main/default/objects/Opportunity/fields/Transacoes_Mensais__c.field-meta.xml
<CustomField>
    <fullName>Transacoes_Mensais__c</fullName>
    <label>Number of Monthly Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>