force-app/main/default/objects/Opportunity/fields/UsePagstream__c.field-meta.xml
<CustomField>
    <fullName>UsePagstream__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will Pagstream be used as the recurring payment solution?</description>
    <inlineHelpText>Will Pagstream be used as the recurring payment solution?</inlineHelpText>
    <label>PagStream</label>
    <type>Checkbox</type>
</CustomField>