force-app/main/default/objects/Opportunity/fields/Utilizar_Pagstream__c.field-meta.xml
<CustomField>
    <fullName>Utilizar_Pagstream__c</fullName>
    <description>Utilizará o Pagstream como solução de recorrência?</description>
    <inlineHelpText>Utilizará o Pagstream como solução de recorrência?</inlineHelpText>
    <label>Pagstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>