force-app/main/default/objects/Opportunity/fields/Visible_Others_Settlement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Visible_Others_Settlement_Frequency__c</fullName>
    <formula>OR(
				INCLUDES(NationalPaymentMethod__c, &apos;Pix&apos;),
				INCLUDES(NationalPaymentMethod__c, &apos;Débito Flash&apos;),
				INCLUDES(NationalPaymentMethod__c, &apos;Boleto Flash&apos;)
)</formula>
    <label>Visible Others Settlement Frequency</label>
    <type>Checkbox</type>
</CustomField>