force-app/main/default/objects/Opportunity/fields/Visible_Settlement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Visible_Settlement_Frequency__c</fullName>
    <formula>AND(
				INCLUDES(BusinessModel__c, &apos;Intermediation&apos;),
				NOT(INCLUDES(BusinessModel__c, &apos;Gateway&apos;)),
				INCLUDES(NationalPaymentMethod__c, &apos;Cartão de Crédito&apos;)
)</formula>
    <label>Visible Credit Settlement Frequency</label>
    <type>Checkbox</type>
</CustomField>