force-app/main/default/objects/Opportunity/fields/Was_Contract_PDF_Generated__c.field-meta.xml
<CustomField>
    <fullName>Was_Contract_PDF_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Contract PDF Generated</label>
    <type>Checkbox</type>
</CustomField>