force-app/main/default/objects/Opportunity/fields/Which_platform__c.field-meta.xml
<CustomField>
    <fullName>Which_platform__c</fullName>
    <label>Which platform is used?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>