force-app/main/default/objects/Opportunity/fields/xb_receita_mensal__c.field-meta.xml
<CustomField>
    <fullName>xb_receita_mensal__c</fullName>
    <description>Faixa de faturamento mensal das oportunidades internacionais.</description>
    <inlineHelpText>Merchant’s potential of total processed volume</inlineHelpText>
    <label>Potential TPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>