force-app/main/default/objects/Opportunity/fields/ZeroAuthCreditCard__c.field-meta.xml
<CustomField>
    <fullName>ZeroAuthCreditCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zero Auth Credit Card</label>
    <type>Checkbox</type>
</CustomField>