force-app/main/default/objects/Opportunity/recordTypes/Crossborder.recordType-meta.xml
<RecordType>
    <fullName>Crossborder</fullName>
    <active>true</active>
    <businessProcess>XB%2BNB</businessProcess>
    <label>Cross-border</label>
</RecordType>