force-app/main/default/objects/Opportunity/recordTypes/NaTional.recordType-meta.xml
<RecordType>
    <fullName>NaTional</fullName>
    <active>true</active>
    <businessProcess>XB%2BNB</businessProcess>
    <label>National</label>
</RecordType>