force-app/main/default/objects/Opportunity/recordTypes/New_Crossborder.recordType-meta.xml
<RecordType>
    <fullName>New_Crossborder</fullName>
    <active>true</active>
    <businessProcess>XB%2BNB</businessProcess>
    <description>used when creating a cross-border opportunity</description>
    <label>New Cross-border</label>
</RecordType>