force-app/main/default/objects/Opportunity/recordTypes/New_National.recordType-meta.xml
<RecordType>
    <fullName>New_National</fullName>
    <active>true</active>
    <businessProcess>XB%2BNB</businessProcess>
    <description>used when creating a national opportunity</description>
    <label>New National</label>
</RecordType>