force-app/main/default/objects/Opportunity/recordTypes/Pix_International_Pix_Roaming.recordType-meta.xml
<RecordType>
    <fullName>Pix_International_Pix_Roaming</fullName>
    <active>true</active>
    <businessProcess>Pix International %26 Pix Roaming</businessProcess>
    <label>Pix International &amp; Pix Roaming</label>
</RecordType>