force-app/main/default/objects/Opportunity/validationRules/Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT ( AND ( $Profile.Name = &apos;System Administrator&apos; , CreatedDate &lt;= DATETIMEVALUE(DATE(2025,8,10)) ) ) , 
AND(ISPICKVAL(Account.Type, &quot;&quot;), ISPICKVAL(StageName, &quot;Negotiation&quot;)))</errorConditionFormula>
    <errorMessage>It is not possible to change the stage to Negotiation, as the Type field in Account is empty.</errorMessage>
</ValidationRule>