force-app/main/default/objects/Opportunity/validationRules/ClosureStatusDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosureStatusDate</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(StageName, &apos;Hibernate&apos;), ISPICKVAL(StageName, &apos;Closed&apos;), ISPICKVAL(StageName, &apos;Closed Lost&apos;), ISPICKVAL(StageName, &apos;Frozen&apos;), ISPICKVAL(StageName, &apos;Closed Terminated&apos;)), ISBLANK(ClosureStatusDate__c)  )</errorConditionFormula>
    <errorDisplayField>ClosureStatusDate__c</errorDisplayField>
    <errorMessage>Fill in the &quot;Closure Status Date&quot; field before closing the Opportunity</errorMessage>
</ValidationRule>