force-app/main/default/objects/Opportunity/validationRules/CountryRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CountryRule</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Account.BillingCountry)</errorConditionFormula>
    <errorMessage>The Account Billing Country field cannot be empty.</errorMessage>
</ValidationRule>