force-app/main/default/objects/Opportunity/validationRules/LossReason.validationRule-meta.xml
<ValidationRule>
    <fullName>LossReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT ( AND ( $Profile.Name = &apos;System Administrator&apos; , CreatedDate &lt;= DATETIMEVALUE(DATE(2025,8,10)) ) ) ,
ISBLANK(TEXT(Loss_Reason__c)) &amp;&amp; ISPICKVAL( StageName , &quot;Closed Lost&quot;)
)</errorConditionFormula>
    <errorMessage>The Loss Reason field requires a value when the stage is Closed Lost</errorMessage>
</ValidationRule>