force-app/main/default/objects/Opportunity/validationRules/NegotiationFields.validationRule-meta.xml
<ValidationRule>
    <fullName>NegotiationFields</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
ISBLANK(Transacoes_Mensais__c),
ISBLANK(Ticket_Medio__c)
),
ISPICKVAL(PRIORVALUE(StageName), &quot;Negotiation&quot;),
RecordType.DeveloperName != &apos;National&apos;,
RecordType.DeveloperName != &apos;Crossborder&apos;
)</errorConditionFormula>
    <errorMessage>Fill in the &quot;Number of Monthly Transactions&quot; and the &quot;Avarage Ticket Price&quot; fields before change the Opportunity Status</errorMessage>
</ValidationRule>