force-app/main/default/objects/Opportunity/validationRules/NegotiationFields_Recurring.validationRule-meta.xml
<ValidationRule>
    <fullName>NegotiationFields_Recurring</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK (TEXT(Recorrencia__c)),
ISPICKVAL(PRIORVALUE(StageName), &quot;Negotiation&quot;),
ISCHANGED(StageName),
RecordType.DeveloperName != &apos;National&apos;,
RecordType.DeveloperName != &apos;Crossborder&apos;
)</errorConditionFormula>
    <errorDisplayField>Recorrencia__c</errorDisplayField>
    <errorMessage>Fill in the &quot;Recurring Payments&quot; fields before change the Opportunity Status</errorMessage>
</ValidationRule>