force-app/main/default/objects/Opportunity/validationRules/QuoteSyncNotApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>QuoteSyncNotApproval</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(SyncedQuote.NeedsApprovalBoard__c &gt; 0, SyncedQuote.NeedsApprovalHead__c &gt; 0), NOT(ISPICKVAL(SyncedQuote.Status,&apos;Approved&apos;))
)</errorConditionFormula>
    <errorMessage>Cotação precisa de aprovação para sincronizar</errorMessage>
</ValidationRule>