force-app/main/default/objects/Opportunity/validationRules/SiteURL.validationRule-meta.xml
<ValidationRule>
    <fullName>SiteURL</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
    OR(
        AND(
            BEGINS(Product_or_service_website_URL__c, &quot;http://&quot;),
            CONTAINS(SUBSTITUTE(Product_or_service_website_URL__c, &quot;http://&quot;, &quot;&quot;), &quot;.&quot;)
        ),
        AND(
            BEGINS(Product_or_service_website_URL__c, &quot;https://&quot;),
            CONTAINS(SUBSTITUTE(Product_or_service_website_URL__c, &quot;https://&quot;, &quot;&quot;), &quot;.&quot;)
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Product_or_service_website_URL__c</errorDisplayField>
    <errorMessage>Invalid URL.</errorMessage>
</ValidationRule>