force-app/main/default/objects/Opportunity/validationRules/UpdateCloseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>UpdateCloseDate</fullName>
    <active>false</active>
    <errorConditionFormula>CloseDate &lt;&gt; (TODAY() + 30)</errorConditionFormula>
    <errorMessage>Erro de CloseDate</errorMessage>
</ValidationRule>