force-app/main/default/objects/Opportunity/validationRules/ValidacaoAvegareTicket.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoAvegareTicket</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        LOWER($RecordType.DeveloperName) = &quot;national&quot;,
        LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;
    ),
    ISBLANK(AverageSalesTicket__c)
)</errorConditionFormula>
    <errorDisplayField>AverageSalesTicket__c</errorDisplayField>
    <errorMessage>The Average Order Value field is empty, fill it in to continue.</errorMessage>
</ValidationRule>