force-app/main/default/objects/Opportunity/validationRules/ValidacaoBusinessModel.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoBusinessModel</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(BusinessModelType__c),
    OR(
        $RecordType.Name = &quot;Nacional&quot;,
        $RecordType.Name = &quot;Cross Border&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>BusinessModelType__c</errorDisplayField>
    <errorMessage>The Business Model Type field is empty, fill it in to continue.</errorMessage>
</ValidationRule>