force-app/main/default/objects/Opportunity/validationRules/ValidacaoPaymentRecurrence.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoPaymentRecurrence</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT ( AND ( $Profile.Name = &apos;System Administrator&apos; , CreatedDate &lt;= DATETIMEVALUE(DATE(2025,8,10)) ) ) ,
AND(
    OR(
        LOWER($RecordType.DeveloperName) = &quot;national&quot;,
        LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;
    ),
    ISPICKVAL(PaymentRecurrence__c, &quot;&quot;)
) )</errorConditionFormula>
    <errorDisplayField>PaymentRecurrence__c</errorDisplayField>
    <errorMessage>The &apos;Recurring Payments?&apos; field is empty, fill it in to continue.</errorMessage>
</ValidationRule>