force-app/main/default/objects/Opportunity/validationRules/ValidacaoPrevisaodeFaturamento.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoPrevisaodeFaturamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
LOWER($RecordType.DeveloperName) = &quot;national&quot;,
LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;
),
ISBLANK(previs_fat_rs__c)
)</errorConditionFormula>
    <errorDisplayField>previs_fat_rs__c</errorDisplayField>
    <errorMessage>The PagBrasil TPV field is empty, fill it in to continue.</errorMessage>
</ValidationRule>