force-app/main/default/objects/Opportunity/validationRules/ValidacaoProductCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoProductCategory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				LOWER($RecordType.DeveloperName) = &quot;national&quot;,
    ISPICKVAL(ProductClass__c, &quot;&quot;),
				NOT(ISPICKVAL(StageName, &quot;Discovery&quot;))
)</errorConditionFormula>
    <errorDisplayField>ProductClass__c</errorDisplayField>
    <errorMessage>The Product Category field is empty, fill it in to continue.</errorMessage>
</ValidationRule>