force-app/main/default/objects/Opportunity/validationRules/ValidacaoProductClass.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoProductClass</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        LOWER($RecordType.DeveloperName) = &quot;national&quot;,
        LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;
    ),
    ISPICKVAL(ProductClass__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>ProductClass__c</errorDisplayField>
    <errorMessage>The Product Category field is empty, fill it in to continue.</errorMessage>
</ValidationRule>