force-app/main/default/objects/Opportunity/validationRules/ValidacaoProductType.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoProductType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        LOWER($RecordType.DeveloperName) = &quot;national&quot;,
        LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;
    ),
    ISPICKVAL(Product_Type__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Product_Type__c</errorDisplayField>
    <errorMessage>The Product Type field is empty, fill it in to continue.</errorMessage>
</ValidationRule>