force-app/main/default/objects/Opportunity/validationRules/ValidacaoRemittanceXB.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoRemittanceXB</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;,
    ISPICKVAL(Moeda__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Moeda__c</errorDisplayField>
    <errorMessage>The Remittance Currency field is empty, fill it in to continue.</errorMessage>
</ValidationRule>