force-app/main/default/objects/Opportunity/validationRules/ValidacaoSegmento.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoSegmento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        LOWER($RecordType.DeveloperName) = &quot;national&quot;,
        LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;
    ),
    ISPICKVAL(Segmento__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Segmento__c</errorDisplayField>
    <errorMessage>The Industry field is empty, fill it in to continue.</errorMessage>
</ValidationRule>