force-app/main/default/objects/Opportunity/validationRules/ValidacaoTransacoesMensais.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoTransacoesMensais</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        LOWER($RecordType.DeveloperName) = &quot;national&quot;,
        LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;
    ),
    ISBLANK(Transacoes_Mensais__c)
)</errorConditionFormula>
    <errorDisplayField>Transacoes_Mensais__c</errorDisplayField>
    <errorMessage>O campo Transações Mensais está em vazio, preencha para continuar.</errorMessage>
</ValidationRule>