force-app/main/default/objects/Opportunity/validationRules/Validation_Potential_TPV.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Potential_TPV</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;,
ISBLANK(xb_receita_mensal__c)
)</errorConditionFormula>
    <errorDisplayField>nb_receita_mensal__c</errorDisplayField>
    <errorMessage>The Potential TPV field is empty, fill it in to continue.</errorMessage>
</ValidationRule>