force-app/main/default/objects/Opportunity/validationRules/Validation_Potential_TPV_NB.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Potential_TPV_NB</fullName>
    <active>true</active>
    <description>AND(
LOWER($RecordType.DeveloperName) = &quot;national&quot;,
ISBLANK(nb_receita_mensal__c)
)</description>
    <errorConditionFormula>AND(
LOWER($RecordType.DeveloperName) = &quot;national&quot;,
ISBLANK(nb_receita_mensal__c)
)</errorConditionFormula>
    <errorMessage>The Potential TPV field is empty, fill it in to continue.</errorMessage>
</ValidationRule>