force-app/main/default/objects/Opportunity/validationRules/Validation_Tier_CS.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Tier_CS</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(TierCS__c,&quot;&quot;),
ISPICKVAL(StageName, &quot;Go Live&quot;)
)</errorConditionFormula>
    <errorMessage>There must be a CS Tier to change the stage to Go Live.</errorMessage>
</ValidationRule>