force-app/main/default/objects/Opportunity/validationRules/ValidationAntecipationFrequency2.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationAntecipationFrequency2</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        LOWER($RecordType.DeveloperName) = &quot;national&quot;,
        LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;
    ),
    ISPICKVAL(Antecipation_Frequency_2__c,&quot;&quot;),
				NOT(ISPICKVAL(StageName, &quot;Discovery&quot;))
)</errorConditionFormula>
    <errorMessage>The Antecipation Frequency 2° field is empty, fill it in to continue.</errorMessage>
</ValidationRule>