force-app/main/default/objects/Opportunity/validationRules/ValidationDesiredBusiness.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationDesiredBusiness</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        LOWER($RecordType.DeveloperName) = &quot;national&quot;,
        LOWER($RecordType.DeveloperName) = &quot;crossborder&quot;
    ),
    ISBLANK(BusinessModel__c)
)</errorConditionFormula>
    <errorDisplayField>BusinessModel__c</errorDisplayField>
    <errorMessage>The Desired Business Model field is empty, fill it in to continue.</errorMessage>
</ValidationRule>